--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
 version:  '3.8'
 services:
   app:
-    image: btphoto:v0.01
+    image: brphotoflask:v0.01
     container_name: btphotoflask
     restart: unless-stopped
     ports:
       - "5000:5000"  # Map host port 5000 to container port 5000
-#    volumes:
-#      - ./data:/data
+    volumes:
+      - ./:/app
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=1
+  nginx:
+    image: nginx:1.25.4-alpine
+    container_name: nginx
+    restart: always
+    ports:
+      - '8088:8080'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./static:/staticfiles:ro
+    depends_on:
+      - app
+volumes:
+  static:
