envents en nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,6 @@
-
+events {
+    worker_connections 1024; # Número máximo de conexiones simultáneas
+}
 http {
     upstream flask{
         server app:5000;
