--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
         server_name localhost btphoto.ddns.net;
 
         location /static/ {
-            alias  /staticfiles/;
+            alias  /static/;
         }
 
         location / {
