--- a/xdocker-compose.yml
+++ b/xdocker-compose.yml
@@ -13,14 +13,12 @@ services:
       - FLASK_DEBUG=1
   nginx:
     image: nginx:1.25.4-alpine
-    container_name: nginx
+    container_name: nginxbtphoflask
     restart: always
     ports:
       - '8088:8080'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./static:/staticfiles:ro
+      - ./static:/static
     depends_on:
       - app
-volumes:
-  static:
