--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,12 +14,13 @@ http {
         }
 
         location / {
+            #include uwsgi_params;
+            #uwsgi_pass app:5000;  # Redirige al socket de uWSGI
             proxy_pass http://app:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            #proxy_set_header X-CSRFToken $http_x_csrf_token;
             proxy_set_header Cookie $http_cookie;
         }
     }
