correcciones para el deploy

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,3 +7,14 @@ socket = 0.0.0.0:5000  # Escucha en el puerto 5000
 chmod-socket = 660
 vacuum = true
 die-on-term = true
+
+
+
+[uwsgi]
+module = app:app
+master = true
+processes = 4
+threads = 2
+http = 0.0.0.0:5000
+vacuum = true
+die-on-term = true
