--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
         listen 8080;
         server_name localhost btphoto.ddns.net;
 
-        location /static/ {
+        location static/ {
             alias  /static/;
         }
 
