--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,20 +1,32 @@
 [uwsgi]
-module = app:app  # Nombre del archivo y la instancia de Flask (app.py -> app)
+module = app:app  ; Nombre del archivo y la instancia de Flask (app.py -> app)
 master = true
-processes = 4  # Número de procesos
-threads = 2  # Número de subprocesos por proceso
-socket = 0.0.0.0:5000  # Escucha en el puerto 5000
+buffer-size = 65535 ; aumenta el tamaño del buffer
+post-buffering = 8192 ; aumenta el tamaño del buffer
+processes = 4  ; Número de procesos
+threads = 2  ; Número de subprocesos por proceso
+http = 0.0.0.0:5000  ; Escucha en el puerto 5000
 chmod-socket = 660
 vacuum = true
 die-on-term = true
 
+;[uwsgi]
+;module = app:app  # Nombre del archivo y la instancia de Flask (app.py -> app)
+;master = true
+;processes = 4  # Número de procesos
+;threads = 2  # Número de subprocesos por proceso
+;socket = 0.0.0.0:5000  # Escucha en el puerto 5000
+;chmod-socket = 660
+;vacuum = true
+;die-on-term = true
 
 
-[uwsgi]
-module = app:app
-master = true
-processes = 4
-threads = 2
-http = 0.0.0.0:5000
-vacuum = true
-die-on-term = true
+
+;[uwsgi]
+;module = app:app
+;master = true
+;processes = 4
+;threads = 2
+;http = 0.0.0.0:5000
+;vacuum = true
+;die-on-term = true
