--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,35 @@
-version: '3.8'
+#version: '3.8'
 
+#services:
+
+#  app:
+#    image: brphotoflask:v0.01
+#    container_name: btphotoflask
+#    restart: unless-stopped
+#    ports:
+#      - "5000:5000"
+
+version:  '3.8'
 services:
-
   app:
-    image: brphotoflask:v0.01
-    container_name: btphotoflask
+    image: uwsgibtphoto:v0.03
+    container_name: uwsgibtphoto
     restart: unless-stopped
     ports:
-      - "5000:5000"
+      - "5000:5000"  # Map host port 5000 to container port 5000
+    volumes:
+      - ./:/app
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=0 # Desactivar con numero 0 para producción
+  nginx:
+    image: nginx:1.27.5-alpine
+    container_name: nginxbtphoflask
+    restart: always
+    ports:
+      - '8088:8080'
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./static:/static
+    depends_on:
+      - app
