--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,8 @@ http {
 
         location static/ {
             alias  /static/;
+        location ~* \.(eot|ttf|woff|woff2|otf)$ {
+            add_header Access-Control-Allow-Origin *;
         }
 
         location / {
