--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,11 +8,12 @@ http {
     server {
         listen 8080;
         server_name localhost btphoto.ddns.net;
-
         location static/ {
             alias  /static/;
+            add_header Access-Control-Allow-Origin *; # Permitir acceso desde cualquier origen
+        }
         location ~* \.(eot|ttf|woff|woff2|otf)$ {
-            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Origin *; # Permitir acceso desde cualquier origen para fuentes
         }
 
         location / {
